force-app/main/default/objects/Lead/fields/Total_Duration_on_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_on_Not_Contacted__c</fullName>
    <formula>/* Time spent in Not Contacted */

 /* WEEKS */
IF(
    FLOOR(Time_spent_in_Not_Contacted__c / 10080) &gt; 0,
    TEXT(FLOOR(Time_spent_in_Not_Contacted__c / 10080)) &amp;
    IF(FLOOR(Time_spent_in_Not_Contacted__c / 10080) = 1, &quot; Week &quot;, &quot; Weeks &quot;),
    &quot;&quot;
) &amp;

 /* DAYS */
IF(
    FLOOR(MOD(Time_spent_in_Not_Contacted__c, 10080) / 1440) &gt; 0,
    TEXT(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 10080) / 1440)) &amp;
    IF(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 10080) / 1440) = 1, &quot; Day &quot;, &quot; Days &quot;),
    &quot;&quot;
) &amp;

 /* HOURS */
IF(
    FLOOR(MOD(Time_spent_in_Not_Contacted__c, 1440) / 60) &gt; 0,
    TEXT(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 1440) / 60)) &amp;
    IF(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 1440) / 60) = 1, &quot; Hour &quot;, &quot; Hours &quot;),
    &quot;&quot;
) &amp;

 /* MINUTES — only when &gt;= 1 (no decimals shown) */
IF(
    FLOOR(MOD(Time_spent_in_Not_Contacted__c, 60)) &gt; 0,
    TEXT(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 60))) &amp;
    IF(FLOOR(MOD(Time_spent_in_Not_Contacted__c, 60)) = 1, &quot; Minute&quot;, &quot; Minutes&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration on Not Contacted</label>
    <type>Text</type>
</CustomField>