force-app/main/default/objects/Lead/fields/Total_Duration_on_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_on_Unqualified__c</fullName>
    <formula>/* Time spent in Unqualified */

/* WEEKS */
IF(
    FLOOR(Time_spent_in_Unqualified__c / 10080) &gt; 0,
    TEXT(FLOOR(Time_spent_in_Unqualified__c / 10080)) &amp;
    IF(FLOOR(Time_spent_in_Unqualified__c / 10080) = 1, &quot; Week &quot;, &quot; Weeks &quot;),
    &quot;&quot;
) &amp;

/* DAYS */
IF(
    FLOOR(MOD(Time_spent_in_Unqualified__c, 10080) / 1440) &gt; 0,
    TEXT(FLOOR(MOD(Time_spent_in_Unqualified__c, 10080) / 1440)) &amp;
    IF(FLOOR(MOD(Time_spent_in_Unqualified__c, 10080) / 1440) = 1, &quot; Day &quot;, &quot; Days &quot;),
    &quot;&quot;
) &amp;

/* HOURS */
IF(
    FLOOR(MOD(Time_spent_in_Unqualified__c, 1440) / 60) &gt; 0,
    TEXT(FLOOR(MOD(Time_spent_in_Unqualified__c, 1440) / 60)) &amp;
    IF(FLOOR(MOD(Time_spent_in_Unqualified__c, 1440) / 60) = 1, &quot; Hour &quot;, &quot; Hours &quot;),
    &quot;&quot;
) &amp;

/* MINUTES — no decimals */
IF(
    ROUND(MOD(Time_spent_in_Unqualified__c, 60), 0) &gt; 0,
    TEXT(ROUND(MOD(Time_spent_in_Unqualified__c, 60), 0)) &amp;
    IF(ROUND(MOD(Time_spent_in_Unqualified__c, 60), 0) = 1, &quot; Minute&quot;, &quot; Minutes&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration on Unqualified</label>
    <type>Text</type>
</CustomField>