force-app/main/default/objects/Lead/fields/Week_Spent_in_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Week_Spent_in_Not_Contacted__c</fullName>
    <formula>FLOOR(Time_spent_in_Not_Contacted__c / 10080)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Spent in Not Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>