force-app/main/default/objects/Lead/fields/Week_spent_in_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Week_spent_in_Unqualified__c</fullName>
    <formula>FLOOR( Time_spent_in_Unqualified__c  / 10080)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week spent in Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>