force-app/main/default/objects/Lead/validationRules/Mass_Email_List_Required_When_Lead_Dead.validationRule-meta.xml
<ValidationRule>
    <fullName>Mass_Email_List_Required_When_Lead_Dead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT( Dead_Reson__c ))),
    ISBLANK(TEXT(Mass_Email_List__c))
)</errorConditionFormula>
    <errorDisplayField>Mass_Email_List__c</errorDisplayField>
    <errorMessage>Please select a value for the Mass Email List when the lead is marked as Dead.</errorMessage>
</ValidationRule>