force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Case_Type__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>Dead_Reson__c</field>
        <operation>notEqual</operation>
        <value>Non Responsive,Affordability Issue,Competition Won,Bad Personality Fit,SS Not Interested,Not a lead</value>
    </filters>
    <label>Working Leads</label>
</ListView>